--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,22 @@ p {
   font-family: var(--secondary-font);
 }
 
+/* Scroll Bar */
+::-webkit-scrollbar {
+  width: 0.6rem;
+  border-radius: 0.5rem;
+  background-color: hsl(228, 8%, 76%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(228, 8%, 64%);
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(228, 8%, 54%);
+}
+
 /* reusable CSS */
 .container {
   max-width: 1140px;
@@ -114,14 +130,26 @@ p {
   font-size: 16px;
   font-family: var(--secondary-font);
   cursor: pointer;
+  transition: 0.4s;
 }
 
 .btn-main {
   background: linear-gradient(0deg, var(--orange), var(--orange-darker));
+  transition: 0.4s;
+}
+
+.btn-main:hover {
+  color: var(--orange-darker);
+  background: var(--putih);
 }
 
 .btn-secondary {
   border: 1px solid var(--orange);
+  transition: 0.4s;
+}
+
+.btn-secondary:hover {
+  background: linear-gradient(0deg, var(--orange), var(--orange-darker));
 }
 
 /* Header */
@@ -428,4 +456,91 @@ p {
   line-height: 150%;
   margin-bottom: 48px;
   max-width: 400px;
+}
+
+.getmore__title span {
+  color: var(--orange);
+}
+
+/* Top creator section */
+.topcreator__title {
+  text-align: center;
+}
+
+.topcreator__cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.topcreator__card {
+  display: flex;
+  width: 360px;
+  background-color: var(--card-bg);
+  border: 1px solid var(--card-bg);
+  border-radius: 16px;
+  padding: 16px;
+  transition: 0.2s;
+}
+
+.topcreator__card:hover {
+  border: 1px solid var(--orange);
+}
+
+.topcreator__card-img {
+  width: 56px;
+  border-radius: 40px;
+  margin-right: 20px;
+}
+
+.topcreator__card-details {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+.topcreator__card-name {
+  font-size: 16px;
+  font-family: var(--secondary-font);
+  font-weight: var(--font-regular);
+  color: var(--putih);
+  margin-bottom: 4px;
+}
+
+.topcreator__card-wallet {
+  font-size: 12px;
+  font-family: var(--secondary-font);
+  font-weight: var(--font-light);
+  color: var(--paragraph-color);
+}
+
+.bx-wallet {
+  font-size: 12px;
+  color: var(--orange);
+}
+
+/* Join Section */
+.join__container {
+  padding: 72px;
+  text-align: center;
+  border-radius: 12px;
+  background-color: rgba(253, 112, 34, 7%);
+}
+
+.join__title {
+  font-size: 44px;
+  font-weight: var(--font-extra-bold);
+  margin-bottom: 16px;
+}
+
+.join__desc {
+  font-size: 18px;
+  color: var(--putih);
+  font-weight: var(--font-light);
+  margin-bottom: 60px;
+}
+
+/* Footer */
+.footer {
+  background-color: rgba(62, 4, 4, 22%);
 }
